add build orders

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     </div>
     <div id="orders">
       <ul id="orders-list">
-        <li>completo - Bran</li>
-        <li>completo - Susana</li>
-        <li>Hamburguesa - Jairo</li>
+        <p>Cargando...</p>
       </ul>
     </div>
   </body>
